# OpenSees_Model_Generator

./: .buildinfo  .flake8  .gitignore  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  api.html  components.py  dev_notes.org  docstrings.py  genindex.html  getting_started.html  grids.py  index.html  installation.txt  modeler.py  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_pip.txt  restore.py  run_checks.sh  search.html  searchindex.js  setup.cfg  setup.py  solver.py  tips.html  tox.ini  util_vis.py  util_vis3D.py
.github/workflows/: build_docs.yaml  conda.yml  deploy.yaml  deploy.yml  docs_check.yaml  documentation.off  documentation.yml  format_check.yml  lint.yml  so-samtools.yaml  test.yaml  test_and_deploy.yaml  test_and_deploy.yml  tests.yml
_autosummary/: osmg.collections.Collection.html  osmg.collections.CollectionActive.html  osmg.collections.CollectionWithConnectivity.html  osmg.collections.NodeCollection.html  osmg.collections.html  osmg.common.html  osmg.component_assembly.ComponentAssembly.html  osmg.component_assembly.html  osmg.defaults.html  osmg.gen.component_gen.BeamColumnGenerator.html  osmg.gen.component_gen.TrussBarGenerator.html  osmg.gen.component_gen.html  osmg.gen.html  osmg.gen.material_gen.MaterialGenerator.html  osmg.gen.material_gen.html  osmg.gen.mesh_shapes.html  osmg.gen.node_gen.NodeGenerator.html  osmg.gen.node_gen.html  osmg.gen.query.ElmQuery.html  osmg.gen.query.LoadCaseQuery.html  osmg.gen.query.html  osmg.gen.section_gen.SectionGenerator.html  osmg.gen.section_gen.html  osmg.gen.steel.brb.BRBGenSettings.html  osmg.gen.steel.brb.BRBGenerator.html  osmg.gen.steel.brb.html  osmg.gen.steel.html  osmg.gen.uid_gen.UIDGenerator.html  osmg.gen.uid_gen.html  osmg.gen.zerolength_gen.html  osmg.get_latest_pypi_version.html  osmg.graphics.general_2d.html  osmg.graphics.graphics_common.html  osmg.graphics.graphics_common_3d.html  osmg.graphics.html  osmg.graphics.postprocessing_3d.html  osmg.graphics.preprocessing_3d.html  osmg.graphics.visibility.ElementVisibility.html  osmg.graphics.visibility.NodeVisibility.html  osmg.graphics.visibility.html  (+76 more)
_modules/: index.html
_modules/osmg/: collections.html  common.html  component_assembly.html  defaults.html  get_latest_pypi_version.html  ground_motion_utils.html  level.html  line.html  load_case.html  mesh.html  model.html  obj_collections.html  physical_material.html  solver.html  transformations.html
_sources/: getting_started.rst.txt  index.rst.txt  notebooks.rst.txt  tips.rst.txt
_sources/_autosummary/: osmg.collections.Collection.rst.txt  osmg.collections.CollectionActive.rst.txt  osmg.collections.CollectionWithConnectivity.rst.txt  osmg.collections.rst.txt  osmg.common.rst.txt  osmg.component_assembly.rst.txt  osmg.defaults.rst.txt  osmg.gen.component_gen.BeamColumnGenerator.rst.txt  osmg.gen.component_gen.TrussBarGenerator.rst.txt  osmg.gen.component_gen.rst.txt  osmg.gen.material_gen.MaterialGenerator.rst.txt  osmg.gen.material_gen.rst.txt  osmg.gen.mesh_shapes.rst.txt  osmg.gen.node_gen.rst.txt  osmg.gen.query.ElmQuery.rst.txt  osmg.gen.query.rst.txt  osmg.gen.rst.txt  osmg.gen.section_gen.rst.txt  osmg.gen.steel.brb.BRBGenerator.rst.txt  osmg.gen.steel.brb.rst.txt  osmg.gen.steel.rst.txt  osmg.gen.uid_gen.rst.txt  osmg.gen.zerolength_gen.rst.txt  osmg.get_latest_pypi_version.rst.txt  osmg.graphics.general_2d.rst.txt  osmg.graphics.graphics_common.rst.txt  osmg.graphics.graphics_common_3d.rst.txt  osmg.graphics.postprocessing_3d.rst.txt  osmg.graphics.preprocessing_3d.rst.txt  osmg.graphics.rst.txt  osmg.graphics.visibility.ElementVisibility.rst.txt  osmg.graphics.visibility.NodeVisibility.rst.txt  osmg.graphics.visibility.rst.txt  osmg.ground_motion_utils.rst.txt  osmg.level.rst.txt  osmg.line.Line.rst.txt  osmg.line.rst.txt  osmg.load_case.LineElementUDL.rst.txt  osmg.load_case.rst.txt  osmg.mesh.Edge.rst.txt  (+41 more)
_sources/autoapi/: index.rst.txt
_sources/notebooks/: 2_Define_a_Model.ipynb.txt  doc_1_getting_started.ipynb.txt  doc_2_define_a_model.ipynb.txt  doc_3_run_an_analysis.ipynb.txt
autoapi/: index.html
autoapi/osmg/: index.html
autoapi/test_a/: index.html
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  notebooks.rst  tips.rst
envs/: osmg.yaml  so-samtools.yaml
examples/: 1_Getting_Started.ipynb  2D_SMRF_nlth.py  2D_SMRF_pushover.py  2_Define_a_Model.ipynb  3D_SMRF_push.py  3_Run_an_Analysis.ipynb  analysis_examples.py  cantilever.py  example_dxf.py  example_offsets.py  example_simple.py  offsets.py  panel_zone_demo.py  simple_2D_frame.py  toy_structures.py
examples/dxf/: dwg_grids.dxf  full.dxf  gridlines.dxf  gridlines_brace.dxf  gridlines_gravity_primary.dxf  gridlines_gravity_secondary.dxf  gridlines_momentframe_beams.dxf  gridlines_momentframe_cols.dxf
examples/groundmotions/: 1xa.txt  1ya.txt
examples/test_data/: Uang-SSR-00-LS-1-LoadDeflection.csv  Uang-SSR-00-LS-1-MomentPZDistortion.csv  Uang-SSR-00-LS-1-MomentRotation.csv  source.txt
notebooks/: 1_Getting_Started.html  1_Getting_Started.ipynb  2_Define_a_Model.html  doc_1_getting_started.html  doc_1_getting_started.ipynb  doc_2_define_a_model.html
notes/: dev_notes.org
section_data/: EXCEL_to_JSON.ipynb  EXCEL_to_JSON.py  aisc-shapes-database-v15.0.xlsx  aisc-shapes-database-v15.0_modified.xlsx  get_sections  sections.json
src/: common.py  component_generator_plain.py  components.py  grids.py  group.py  level.py  line.py  material.py  mesher.py  mesher_section_gen.py  model.py  node.py  preprocess.py  section.py  selection.py  solver.py  transformations.py  trib_area_analysis.py
src/graphics/: graphics_common_3D.py  postprocessing_3D.py  preprocessing_3D.py
src/osmg/: #physical_material.py#  __init__.py  common.py  (+20 more)
test/: test.py
tests/: off  test_a.py
tributary_area_load_distr/: example1.py  example2.py  example2_trib.py  example3.py  mesher.py
unit_tests/: test_modeler.py  test_modeler.py~
utility/: common.py  lvl_operations.py  mesher.py  mesher_section_gen.py  transformations.py  trib_area_analysis.py
(+289 files in other folders)
