[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = '3.9'
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true

ignore_missing_imports = true
implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]
