[metadata]
name = osmg
version = 0.0.11
url = https://github.com/ioannis-vm/OpenSees_Model_Generator
description = OpenSees Model Generator
long_description = OpenSees Model Generator
long_description_content_type = text/x-rst
author = John Vouvakis Manousakis
license = GPL
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    osmg
    osmg.gen
    osmg.graphics
    osmg.ops
    osmg.postprocessing
    osmg.preprocessing
install_requires =
    openseespy>=3.2.2.10
    plotly>=4.14.3
    matplotlib>=3.4.1
    pandas>=1.2.4
    xlrd>=2.0.1
    openpyxl>=3.0.7
    shapely>=1.7.1
    descartes>=1.1.0
    numpy>=1.20.2
    scipy>=1.9.0
    tqdm>=2.0.0
python_requires = >=3.9
package_dir =
    =src
include_package_data=True
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
