[metadata]
name = osmg
version = 0.2.7
url = https://github.com/ioannis-vm/OpenSees_Model_Generator
description = OpenSees Model Generator
long_description = OpenSees Model Generator
long_description_content_type = text/x-rst
author = John Vouvakis Manousakis
license = GPL
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    osmg
    osmg.gen
    osmg.gen.steel
    osmg.graphics
    osmg.ops
    osmg.postprocessing
    osmg.preprocessing
install_requires =
    descartes>=1.1.0
    dill>=0.3.7
    json-tricks>=3.17.3
    matplotlib>=3.4.1
    numpy>=1.20.2
    openpyxl>=3.0.7
    pandas>=1.2.4
    plotly>=4.14.3
    scipy>=1.9.0
    shapely>=1.7.1
    tqdm>=2.0.0
    xlrd>=2.0.1
python_requires = >=3.12
package_dir =
    =src
include_package_data=True
zip_safe = no

[options.extras_require]
dev =
    codespell
    coverage
    jupyter
    jupytext
    mypy
    nbsphinx
    pytest
    pytest-cov
    ruff
    sphinx
    sphinx-autoapi
    sphinx-rtd_theme
    sphinx_autodoc_typehints
    xdoctest
